tests/array_literals_excess_bad.hop
// Verifies excess fixed-array literal elements are rejected.
fn main() {
	var a [int 2] = [1, 2, 3]
	_ = a
}
